Added 3 voice names from GCP as config

--- a/src/main/resources/voice-config.json
+++ b/src/main/resources/voice-config.json
@@ -4,7 +4,11 @@
     "platform": "GCP"
   },
   {
-    "voice": "test2",
-    "platform": "AWS"
+    "voice": "en-US-Chirp3-HD-Kore",
+    "platform": "GCP"
+  },
+  {
+    "voice": "en-US-Chirp3-HD-Orus",
+    "platform": "GCP"
   }
 ]
